--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Victor Yip",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.1"
   },
   "devDependencies": {
